# N-MARS

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 2112a961-4710-4035-89d6-88564e0d6e1a.json  28496f02-e3ae-464c-9cb6-49f6923e0ae7.json  6224b975-8414-47b1-9684-7a2e72d6e5c5.json  a0a92e89-6c23-4544-8eaa-70186455280f.json  a10327da-2538-4b89-befe-c9d0d3799614.json
.omc/state/: agent-replay-a10327da-2538-4b89-befe-c9d0d3799614.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  subagent-tracking.json
configs/eval/: gsm8k.yaml  math500.yaml  mbpp.yaml
configs/train/: grpo_template.yaml  sft_gsm8k_llama3.2-1b.yaml  sft_template.yaml
outputs/gradient_cosine/: gradient_cosine_results.json
outputs/self-backtrack-ei-llama3.2-1b-gsm8k/: eval_iter1.json  eval_iter2.json  eval_iter3.json  generation_iter1.json  generation_iter2.json  generation_iter3.json
outputs/self-backtrack-llama3.2-1b-gsm8k/: eval_backtrack_b1_n32.json  eval_greedy.json
outputs/self-reflect-llama3.2-1b-gsm8k/: eval_greedy.json
outputs/self-reflect-msft-llama3.2-1b-gsm8k/: eval_greedy.json
paper/: README.md
paper/ICML-26-LLMHalluc/: ICML26 bLLM.pptx  bibtex.bib  fig.pptx  main.tex
scripts/crc/: bashrc.sh  compute_matched.sh  eval.sh  full.sh  gradient_cosine.sh  grpo_train.sh  inference_cost.sh  nl_self_correction.sh  self_backtrack.sh  self_backtrack_ei.sh  self_backtrack_eval_bt.sh  self_backtrack_full.sh  self_backtrack_math.sh  self_reflect.sh  self_reflect_msft.sh  self_reflect_sft.sh  sft_train.sh  (+1 more)
(+93 files in other folders)
